基本页面转化，

--- a/modules/server/src/main/resources/vm/common/head.html
+++ b/modules/server/src/main/resources/vm/common/head.html
@@ -222,7 +222,10 @@
         function tableRender(data) {
             var done = data.done;
             delete data.done;
-
+            var cols = data.cols;
+            if (!(cols[0] instanceof Array)) {
+                data.cols = [cols];
+            }
             var newWhere = {
                 nodeId: getTopQueryString("nodeId")
             };
