--- a/modules/server/src/main/resources/vm/common/indexMenus.html
+++ b/modules/server/src/main/resources/vm/common/indexMenus.html
@@ -44,6 +44,11 @@
         .layui-tab-title li:first-child > i {
             display: none;
         }
+
+        .layui-logo {
+            width: auto !important;
+            left: 20px !important;
+        }
     </style>
 
     <div class="layui-side layui-bg-black">
