--- a/modules/server/src/main/resources/vm/node/index.html
+++ b/modules/server/src/main/resources/vm/node/index.html
@@ -10,9 +10,8 @@
         <div class="layui-logo">
             <a href="../index.html" style="color: #009688;">Jpom项目管理系统>> </a>
             <span th:title="'版本时间:'+${jpomManifest.timeStamp}+'，进程ID:'+${jpomManifest.pid}">
-                <span th:text="${node.name}"></span>
-                <font style="font-size: 10px;"
-                      th:text="'('+${jpomManifest.version}+')'"></font>
+                [[${node.name}]]<font style="font-size: 10px;"
+                                      th:text="'('+${jpomManifest.version}+')'"></font>
             </span>
         </div>
         <div th:replace="common/userHead::userHead"></div>
