--- a/modules/server/src/main/resources/vm/node/script/list.html
+++ b/modules/server/src/main/resources/vm/node/script/list.html
@@ -1,23 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
-<head>
-    #parse("./common/head.vm")
-    <title>项目管理系统</title>
-    <style>
-        body {
-            padding: 20px;
-        }
-    </style>
+<head th:replace="common/head::head">
 </head>
 
 <body>
 <div class="layui-row">
     <button onclick="location.reload();" class="layui-btn layui-btn-sm">刷新表格</button>
-    #if($user.isSystemUser())
+
+    <th:block th:if="${session.user.isSystemUser()}">
         <button onclick="editItem('');" class="layui-btn layui-btn-sm">添加模板</button>
         <button id="import" class="layui-btn layui-btn-sm">导入模板</button>
-    #end
+    </th:block>
 
 </div>
 <div class="layui-form">
@@ -32,28 +26,24 @@
         </tr>
         </thead>
         <tbody>
-            #foreach($item in $array)
-            <tr>
-                <td>$item.id</td>
-                <td>$item.name</td>
-                <td>$item.modifyTime</td>
-                <td>$item.lastRunUser</td>
-                <td>
-                    <button onclick="runScript('$item.id')" class="layui-btn layui-btn-warm layui-btn-sm">执行
-                    </button>
+        <tr th:each="item : ${array}">
+            <td th:text="${item.id}"></td>
+            <td th:text="${item.name}"></td>
+            <td th:text="${item.modifyTime}"></td>
+            <td th:text="${item.lastRunUser}"></td>
+            <td>
+                <button th:sId="${item.id}" onclick="runScript(this)" class="layui-btn layui-btn-warm layui-btn-sm">执行
+                </button>
+                <button th:sId="${item.id}" th:text="${session.user.isSystemUser()}?'修改':'预览'"
+                        onclick="editItem(this)"
+                        class="layui-btn layui-btn-sm">
+                </button>
 
-                    <button onclick="editItem('$item.id')" class="layui-btn layui-btn-sm">#if($user.isSystemUser())
-                        修改#else 预览#end
-                    </button>
-
-                </td>
-            </tr>
-            #end
-            #if(!$array || $array.size()<=0)
-            <tr>
-                <td colspan="5">没有相关信息</td>
-            </tr>
-            #end
+            </td>
+        </tr>
+        <tr th:if="${#lists.isEmpty(array)}">
+            <td colspan="5">没有相关信息</td>
+        </tr>
         </tbody>
     </table>
 </div>
@@ -86,7 +76,8 @@
         });
     }
 
-    function editItem(id) {
+    function editItem(t) {
+        var id = $(t).attr("sId");
         layerOpen({
             type: 2,
             title: '管理脚本模板',
@@ -96,7 +87,8 @@
         });
     }
 
-    function runScript(id) {
+    function runScript(t) {
+        var id = $(t).attr("sId");
         tabChange({
             id: "runScript-" + id,
             url: './script/console.html?id=' + id,
