--- a/modules/server/src/main/resources/vm/node/system/nginxSetting.html
+++ b/modules/server/src/main/resources/vm/node/system/nginxSetting.html
@@ -1,13 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
-    #parse("./common/head.vm")
-    <title>nginx管理</title>
+    <th:block th:include="common/head::head"></th:block>
     <style>
-        body {
-            padding: 10px;
-        }
 
         .context {
             height: 70vh;
@@ -22,22 +18,23 @@
 
 <body>
 <form action="" class="layui-form" id="form_ngx">
-    <input type="hidden" name="genre" value="$type">
+    <input type="hidden" name="genre" th:value="${type}">
     <div class="layui-form-item">
         <label class="layui-form-label">文件路径</label>
         <div class="layui-input-inline">
             <select name="whitePath" id="whitePath" required lay-verify="required"
-                    #if($type=="update")disabled #end>
+                    th:disabled="${type=='update'}">
                 <option value="">请选择白名单路径</option>
-                #foreach($item in $nginx)
-                    <option value="$item" #if($item==$data.whitePath) selected #end>$!item</option>
-                #end
+
+                <option th:each="item : ${nginx}" th:value="${item}" th:selected="${item==data?.whitePath}"
+                        th:text="${item}">
+                </option>
             </select>
         </div>
         <label class="layui-form-label">文件名称</label>
         <div class="layui-input-inline">
-            <input type="text" name="name" placeholder='文件后缀必须为".conf"' class="layui-input"  #if($type==
-                "update") disabled #end value="$!data.name" required lay-verify="required">
+            <input type="text" name="name" placeholder='文件后缀必须为".conf"' class="layui-input"
+                   th:disabled="${type=='update'}" th:value="${data?.name}" required lay-verify="required">
         </div>
 
     </div>
@@ -45,7 +42,7 @@
         <label class="layui-form-label">配置内容</label>
         <div class="layui-input-block">
                         <textarea name="context" required lay-verify="required" placeholder="请填写nginx配置内容"
-                                  class="layui-textarea context">$!data.context</textarea>
+                                  class="layui-textarea context" th:text="${data?.context}"></textarea>
         </div>
     </div>
     <div class="layui-form-item" style="padding-left: 20%">
@@ -53,7 +50,8 @@
         </button>
     </div>
 </form>
-<script type="text/javascript" src="$!jpomProxyPath/static/js/auto-line-number.js?v=$staticCacheTime"></script>
+<script type="text/javascript"
+        th:src="@{${session.jpomProxyPath}+'/static/js/auto-line-number.js?v='+${session.staticCacheTime}}"></script>
 
 <script type="text/javascript">
 
